--- a/index.html
+++ b/index.html
@@ -1,5 +1,26 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
 
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8" />
+    <title>Antonio's firts website</title>
+  </head>
+
+  <body>
+    <h1>Antonio's Portfolio</h1>
+    <h2>I am a Jr Web Developer</h2>
+    <hr>
+    <a href="../2.4 Movie Ranking Project/solution.html"><h3>Movie Raking Project</h3></a>
+    <img src="./assets/images/movie-ranking.png" height="200" width="300">
+    <a href="../3.4 Birthday Invite Project/index.html"><h3>Birthday Invitatio Project</h3></a>
+    <img src="./assets/images/birthday-invite.png" height="300" width="300">
+    <hr>
+    <p><a href="./public/about.html">About Me</a>
+    <a href="./public/contact.html">Contact Me</a></p>
+
+  </body>
+</html>
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
